# BarkGPT

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  bark_gpt_model.pt  docker-compose.yaml  pyproject.toml
.github/workflows/: build-image.yaml
app/: README.md  main.py
app/a2a_integration/: task_store.py
app/agent/: sre_agent.py
app/bark_agent/: bark_agent.py
app/bark_client/: bark_client.py
app/chat_bark_gpt/: chat_bark_gpt.py
app/context/: app_context.py
app/kafka/: kafka_consumer.py  logs_agent_results_consumer_worker.py
app/routes/: routes.py
app/routes/agent/: controller.py
app/routes/health_check/: controller.py
app/routes/model/: controller.py
app/settings/: __init__.py  app.py
bark_gpt/model/: model.py
bark_gpt/test/: test_hf_gen.py  test_pytorch_gen.py
bark_gpt/train/: prepare_dataset.py  train.py
bark_gpt_2/model/: model.py
bark_gpt_2/parameters/: parameters.py
bark_gpt_2/test/: test_gen.py
bark_gpt_2/train/: README.md  train.py
bark_model/: bark_model.pt  bark_rnn_model.pt
bark_rnn/: README.md
bark_rnn/generate/: generate.py
bark_rnn/model/: model.py
bark_rnn/test/: test.py
bark_rnn/train/: train.py
docs/01-building-from-scratch/: README.md
docs/02-training-on-webtext/: README.md
docs/03-barkgpt-to-barkagent/: README.md
docs/04-deploying-small-language-models/: README.md
docs/05-faster-training-time/: README.md
docs/06-deep-dive-into-llm/: README.md
docs/07-effective-parameterization/: README.md
experimentation/bark_rnn/train/: prepare_dataset.py
infra/terraform/: main.tf  outputs.tf  terraform.tfvars  update-secrets.sh  user_data.sh  variables.tf
infra/terraform/modules/acm/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/api-gateway/: main.tf
infra/terraform/modules/dns/: main.tf  variables.tf
local_datasets/: README.md  load_dataset.py  load_dataset_small.py
logger/: logger.py
models/bark_gpt/bark_text_generator/: bark_text_generator.py
models/bark_gpt/model/: model.py
models/bark_gpt/model/hf/: bark_hf.py
models/bark_gpt/train/: train.py
models/bark_gpt_2/constants/: constants.py
models/bark_gpt_2/model/: model.py
models/bark_gpt_2/model_checkpoint_manager/: model_checkpoints_manager.py
models/bark_gpt_2/parameters/: parameters.py
models/bark_gpt_2/test/: test_gen.py
models/bark_gpt_2/tokenization_manager/: README.md  tokenization_manager.py
models/bark_gpt_2/train/: train.py  training_debug_info.py  training_manager.py
models/bark_gpt_2/ui/: progress_bar.py
models/mistral_3b/: README.md  main.py
test/: test_pytorch_gen.py
